--- a/requisicao-http-rotas/package.json
+++ b/requisicao-http-rotas/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-hash-link": "^1.0.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.1.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
